# matsuzawa-20260211

./: pyproject.toml
.github/prompts/: run_code_generator.md
.github/workflows/: run_main_experiment.yml  run_sanity_check.yml
.research/: research_history.json
config/: config.yaml
config/runs/: comparative-0-qwen3-8b-gsm8k.yaml  proposed-qwen3-8b-gsm8k.yaml
src/: __init__.py  evaluate.py  inference.py  main.py  model.py  preprocess.py  train.py
